// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macro babel 6 css 1`] = `
"'use strict';

var _src = require('../src');

/*#__PURE__*/(0, _src.css)('margin:12px 48px;color:#ffffff;display:flex;flex:1 0 auto;color:blue;width:', widthVar, ';');"
`;

exports[`macro babel 6 css call with no args 1`] = `
"'use strict';

var _src = require('../src');

var cls1 = /*#__PURE__*/(0, _src.css)();"
`;

exports[`macro babel 6 css inside of css 1`] = `
"'use strict';

var _src = require('../src');

var cls2 = /*#__PURE__*/(0, _src.css)('font-size:20px;@media (min-width:420px){color:blue;', /*#__PURE__*/(0, _src.css)('width:96px;height:96px;'), ';line-height:40px;}background:green;');"
`;

exports[`macro babel 6 css object 1`] = `
"'use strict';

var _src = require('../src');

var cls1 = /*#__PURE__*/(0, _src.css)({ display: 'flex' });"
`;

exports[`macro babel 6 flush 1`] = `
"'use strict';

var _src = require('../src');

var someOtherVar = _src.flush;"
`;

exports[`macro babel 6 fontFace 1`] = `
"'use strict';

var _src = require('../src');

(0, _src.fontFace)('font-family:MyHelvetica;src:local(\\"Helvetica Neue Bold\\"),local(\\"HelveticaNeue-Bold\\"),url(MgOpenModernaBold.ttf);font-weight:bold;');"
`;

exports[`macro babel 6 hydrate 1`] = `
"'use strict';

var _src = require('../src');

var someOtherVar = _src.hydrate;"
`;

exports[`macro babel 6 injectGlobal 1`] = `
"'use strict';

var _src = require('../src');

(0, _src.injectGlobal)('body{margin:0;padding:0;& > div{display:none;&:hover{color:green;& span{color:red;&:after{content:\\"end of line\\"}}}}}html{background:green;}');"
`;

exports[`macro babel 6 keyframes 1`] = `
"'use strict';

var _src = require('../src');

var rotate360 = /*#__PURE__*/(0, _src.keyframes)('from{transform:rotate(0deg);}to{transform:rotate(360deg);}');"
`;

exports[`macro babel 6 multiple imports 1`] = `
"'use strict';

var _src = require('../src');

var rotate360 = /*#__PURE__*/(0, _src.keyframes)('from{transform:rotate(0deg);}to{transform:rotate(360deg);}');
var thing = /*#__PURE__*/(0, _src.css)('margin:12px 48px;color:#ffffff;display:flex;flex:1 0 auto;color:blue;width:', widthVar, ';');"
`;

exports[`macro babel 6 some import that does not exist 1`] = `
"'use strict';

var _src = require('../src');

var someOtherVar = _src.thisDoesNotExist;"
`;

exports[`styled macro babel 6 css from react 1`] = `
"'use strict';

var _styled = require('./styled');

var someCls = /*#__PURE__*/(0, _styled.css)('display:flex;');"
`;

exports[`styled macro babel 6 object function 1`] = `
"'use strict';

var _styled2 = require('./styled');

var _styled3 = _interopRequireDefault(_styled2);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var SomeComponent = /*#__PURE__*/(0, _styled3.default)('div')({
  display: 'flex'
});"
`;

exports[`styled macro babel 6 object member 1`] = `
"'use strict';

var _styled2 = require('./styled');

var _styled3 = _interopRequireDefault(_styled2);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var SomeComponent = /*#__PURE__*/(0, _styled3.default)('div')({
  display: 'flex'
});"
`;

exports[`styled macro babel 6 some import that does not exist 1`] = `
"'use strict';

var _styled = require('./styled');

var someOtherVar = _styled.thisDoesNotExist;"
`;

exports[`styled macro babel 6 tagged template literal function 1`] = `
"'use strict';

var _styled2 = require('./styled');

var _styled3 = _interopRequireDefault(_styled2);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var SomeComponent = /*#__PURE__*/(0, _styled3.default)('div')('display:flex;');"
`;

exports[`styled macro babel 6 tagged template literal member 1`] = `
"'use strict';

var _styled2 = require('./styled');

var _styled3 = _interopRequireDefault(_styled2);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var SomeComponent = /*#__PURE__*/(0, _styled3.default)('div')('display:flex;');"
`;
